--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -33,7 +33,7 @@ jobs:
         key: ${{ secrets.PRIVATE_KEY }}
         # 拷贝 .next、public文件夹和package.json文件到服务器指定目录
         source: ".next/,public/,package.json"
-        target: "/nextjs-demo"
+        target: "/nextjs/gabage_recycle"
     
     # 对应第6步，重启安装依赖、后端服务2
     - name: Server Reload
