--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,7 +12,7 @@ jobs:
     steps:
     # 对应第2步，借助已有脚本拉取代码
     - name: Checkout
-      uses: actions/checkout@main
+      uses: actions/checkout@master
       
     # 第3步的准备工作，先配置好node环境
     - uses: actions/setup-node@v2
@@ -27,7 +27,7 @@ jobs:
         
     # 对应第4、5步，配置参数登陆服务器+拷贝到指定目录
     - name: Upload
-      uses: appleboy/scp-action@main
+      uses: appleboy/scp-action@master
       with: 
         host: ${{ secrets.REMOTE_HOST }}
         username: ${{ secrets.REMOTE_USERNAME }}
@@ -38,7 +38,7 @@ jobs:
     
     # 对应第6步，重启安装依赖、后端服务2
     - name: Server Reload
-      uses: appleboy/ssh-action@main
+      uses: appleboy/ssh-action@master
       with: 
         host: ${{ secrets.REMOTE_HOST }}
         username: ${{ secrets.REMOTE_USERNAME }}
