--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
   },
   "dependencies": {
     "@gsap/react": "^2.1.2",
+    "@react-router/dev": "^7.7.1",
+    "@react-router/fs-routes": "^7.7.1",
     "@tailwindcss/vite": "^4.1.11",
     "gsap": "^3.13.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-router": "^7.7.1",
     "tailwindcss": "^4.1.11"
   },
   "devDependencies": {
