--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-router/fs-routes": "^7.7.1",
     "@tailwindcss/vite": "^4.1.11",
     "gsap": "^3.13.0",
+    "lucide-react": "^0.536.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router": "^7.7.1",
