--- a/.hintrc
+++ b/.hintrc
@@ -1,10 +1,9 @@
 {
-  "extends": [
-    "development"
-  ],
+  "extends": ["development"],
   "hints": {
     "typescript-config/consistent-casing": "off",
     "typescript-config/strict": "off",
-    "typescript-config/is-valid": "off"
-  }
+    "typescript-config/is-valid": "off",
+    "no-inline-styles": "off",
+  },
 }
