--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@react-router/dev": "^7.7.1",
     "@react-router/fs-routes": "^7.7.1",
     "@tailwindcss/vite": "^4.1.11",
+    "@types/google-map-react": "^2.1.10",
+    "google-map-react": "^2.2.5",
     "gsap": "^3.13.0",
     "i18next": "^25.3.2",
     "i18next-browser-languagedetector": "^8.2.0",
@@ -26,6 +28,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
+    "@types/node": "^24.3.0",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
     "@vitejs/plugin-react-swc": "^3.10.2",
