--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "i18next-browser-languagedetector": "^8.2.0",
     "lucide-react": "^0.536.0",
     "moment": "^2.30.1",
+    "music-metadata": "^11.8.3",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-i18next": "^15.6.1",
